--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: Development
 email: jinwook1240@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  이 블로그는 <모여서 각자 코딩> 프로그램의 일환으로 제작되었습니다.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
