--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Development
+title: OrehOnyah Github Blog
 email: jinwook1240@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  이 블로그는 <모여서 각자 코딩> 프로그램의 일환으로 제작되었습니다.
+  To learn how develop well..
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "orehonyah.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
